# EDA-Data-visualization

bike-sharing/: pyproject.toml
bike-sharing/bike_sharing/: EDA.ipynb
bike-sharing/tests/: test_bike_sharing.py
superstore_sales/: pyproject.toml
superstore_sales/superstore_sales/: EDA.ipynb
superstore_sales/superstore_sales/data/: .~lock.Sample - Superstore.xls#
superstore_sales/tests/: test_superstore_sales.py
