[tool.poetry]
name = "bike-sharing"
version = "0.1.0"
description = ""
authors = ["Emu6901 <hongochoangm@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.1"
scipy = "^1.8.1"
missingno = "^0.5.1"
seaborn = "^0.11.2"
matplotlib = "^3.5.2"
ipykernel = "^6.15.1"
pandas-profiling = "^3.2.0"
jupyter = "^1.0.0"
ipywidgets = "^7.7.1"
plotly = "^5.9.0"
chart-studio = "^1.1.0"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
