[tool.poetry]
name = "superstore_sales"
version = "0.1.0"
description = ""
authors = ["Emu6901 <hongochoangm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
plotly = "^5.9.0"
seaborn = "^0.11.2"
pandas-profiling = "^3.2.0"
ipykernel = "^6.15.1"
jupyter = "^1.0.0"
ipywidgets = "^7.7.1"
xlrd = "^2.0.1"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
